# scraping-dengan-selenium

./: .gitignore  Pipfile  README.md  data_getter.py  id_getter.py  pyproject.toml  requirements.txt  scraper.py
